--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="max-w-2xl container mx-auto pt-5">
-  <h1 class="font-bold mb-2 text-center text-3xl">Hello {{title}} !</h1>
+
+  <p *ngIf="loading" class="text-center text-lg">Loading...</p>
+
+  <app-main-page></app-main-page>
 
 </div>
