--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,13 +7,13 @@
   </div>
 
   <ul class="footer-part-one">
-    <li class="main-page"><a href="#top">Главная</a></li>
+    <li class="main-page"><a routerLink="/">Главная</a></li>
     <li class="search"><a href="#find-coworking">Поиск</a></li>
     <li><a href="#coworkings-list">Список заведений</a></li>
   </ul>
 
   <ul class="footer-part-two">
-    <li class="profile"><a href="#">Профиль</a></li>
+    <li class="profile"><a routerLink="/profile">Профиль</a></li>
     <li><a href="#">Избранное</a></li>
     <li><a href="#">Ваши места</a></li>
     <li><a href="#">Настройки профиля</a></li>
