--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,9 @@
 <div class="header-container">
   <div class="header-left-side">
-    <h1 class="title">WorkPoint</h1>
+    <div class="logo-img">
+
+    </div>
+    <a class="title" routerLink="/">WorkPoint</a>
     <img src="assets/img/location.svg" class="location-img" alt="location" widht="14" height="16">
     <p class="location-name">Екатеринбург</p>
   </div>
@@ -12,7 +15,9 @@
       <img src="assets/img/notification.svg" alt="notification" width="20" height="22">
     </button>
 
-    <img src="assets/img/profile.png" alt="profile" width="80" height="80">
+    <a routerLink="/profile">
+      <img src="assets/img/profile.png" alt="profile" width="80" height="80">
+    </a>
 
     <p class="profile-name">Мария Иванова</p>
 
