--- a/src/app/components/main-webpage/banner/banner.component.css
+++ b/src/app/components/main-webpage/banner/banner.component.css
@@ -2,9 +2,9 @@
   width: 1600px;
   height: 413px;
   margin-left: 160px;
-  background: #D9D9D9;
   border-radius: 20px;
   margin-bottom: 70px;
+  background-color: #E0E0D6;
 }
 
 .banner-container p {
