--- a/src/app/components/main-webpage/banner/banner.component.html
+++ b/src/app/components/main-webpage/banner/banner.component.html
@@ -6,7 +6,8 @@
 
   <div class="search-container">
     <img src="assets/img/search.svg" alt="search">
-    <input type="text" placeholder="Введите название или тип заведения" class="search-container-input">
+    <input type="text" placeholder="Введите название или тип заведения" class="search-container-input"
+      [(ngModel)]="term">
   </div>
 
   <button class="btn-find-coworking" id="find-coworking">Найти коворкинг</button>
