--- a/src/app/components/main-webpage/coworkings-list/coworkings-list.component.css
+++ b/src/app/components/main-webpage/coworkings-list/coworkings-list.component.css
@@ -2,7 +2,7 @@
   margin-left: 60px;
   width: 1120px;
   height: 571px;
-  background: #D9D9D9;
+  background: rgba(190, 218, 195, 0.7);
   border-radius: 20px;
   margin-bottom: 37px;
 }
@@ -67,7 +67,7 @@
   width: 460px;
   font-family: 'Open Sans';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 24px;
   line-height: 177.69%;
   margin-bottom: 42px;
@@ -111,8 +111,9 @@
   border-radius: 10px;
   width: 275px;
   height: 54px;
-  background: #EDEDED;
+  background: #E0E0D6;
   font-size: 15px;
+  font-weight: 600;
   line-height: 54px;
   color: rgba(27, 31, 59, 0.4);
   text-align: center;
