--- a/src/app/components/main-webpage/filter/filter.component.css
+++ b/src/app/components/main-webpage/filter/filter.component.css
@@ -1,5 +1,5 @@
 .filter-container {
-  background: #D9D9D9;
+  background: rgba(190, 218, 195, 0.7);
   border-radius: 20px;
   width: 419px;
   height: 1037px;
