--- a/src/app/components/main-webpage/main-page/main-page.component.css
+++ b/src/app/components/main-webpage/main-page/main-page.component.css
@@ -10,3 +10,58 @@
 .filter-and-coworkings {
   display: flex;
 }
+
+.banner-container {
+  width: 1600px;
+  height: 413px;
+  margin-left: 160px;
+  background-color: #E0E0D6;
+  border-radius: 20px;
+  margin-bottom: 70px;
+}
+
+.banner-container p {
+  font-weight: 700;
+  font-size: 48px;
+  padding-top: 43px;
+  text-align: center;
+}
+
+.search {
+  display: flex;
+  width: 1175px;
+  margin-left: 412px;
+  justify-content: space-between;
+}
+
+.search-container {
+  display: flex;
+  gap: 17px;
+  width: 862px;
+  height: 54px;
+  background: #FBFBF5;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
+  vertical-align: middle;
+  align-items: center;
+}
+
+.search-container-input {
+  width: 277px;
+  font-size: 15px;
+  background: #FBFBF5;
+  font-weight: 300;
+}
+
+.search-container img {
+  margin-left: 28px;
+}
+
+.btn-find-coworking {
+  width: 275px;
+  background: #E0E0D6;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
+  font-weight: 600;
+  color: rgba(27, 31, 59, 0.6);
+}
