--- a/src/app/components/main-webpage/main-page/main-page.component.html
+++ b/src/app/components/main-webpage/main-page/main-page.component.html
@@ -1,14 +1,26 @@
 <app-header></app-header>
-<app-banner></app-banner>
 
-<p class="count-coworkings" id="coworkings-list">Найдено: {{coworkings.length}} </p>
+<div class="banner-container">
+  <p>Все коворкинги вашего города</p>
+</div>
+<div class="search">
+  <div class="search-container">
+    <img src="assets/img/search.svg" alt="search">
+    <input type="text" placeholder="Введите название или тип заведения" class="search-container-input"
+      [(ngModel)]="term">
+  </div>
+  <button class="btn-find-coworking" id="find-coworking">Найти коворкинг</button>
+</div>
+
+
+<p class="count-coworkings" id="coworkings-list"> Найдено: {{coworkings.length}} </p>
 
 <div class="filter-and-coworkings">
 
   <app-filter></app-filter>
   <div>
 
-    <app-coworkings-list *ngFor="let coworking of coworkings; let i = index"
+    <app-coworkings-list *ngFor="let coworking of coworkings | findCoworking: term; let i = index"
       [coworking]="coworking"></app-coworkings-list>
 
   </div>
