--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -7,7 +7,7 @@
   <div class="card-left-side">
     <span>Добро пожаловать на</span>
     <br>
-    <div class="logo-img2"></div>
+    <img src="assets/img/W-logo.svg" class="logo-img2">
     <span class="title">WorkPoint</span>
   </div>
 
