--- a/src/app/components/main-webpage/coworkings-list/coworkings-list.component.html
+++ b/src/app/components/main-webpage/coworkings-list/coworkings-list.component.html
@@ -15,7 +15,7 @@
   <div class="coworking-info-container">
 
     <div>
-      <img src="{{coworking.image}}" alt="img" width="480" height="415" class="coworking-image">
+      <img src="{{coworking.image[1]}}" alt="img" width="480" height="415" class="coworking-image">
     </div>
 
     <div class="coworking-content">
