--- a/src/app/components/login-page/login-page.component.css
+++ b/src/app/components/login-page/login-page.component.css
@@ -3,6 +3,7 @@
   height: 94.5px;
   margin-top: 27px;
   margin-left: 172px;
+  margin-bottom: 140px;
   border-bottom: 2px solid #e9e9e9;
 }
 
@@ -32,7 +33,6 @@
   width: 1581px;
   height: 522px;
   margin-left: 203px;
-  margin-top: 100px;
 }
 
 .card-left-side {
@@ -47,15 +47,9 @@
 
 .logo-img2 {
   position: absolute;
-  width: 50px;
-  height: 49.74px;
-  left: 195px;
-  top: 298px;
-
-  background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
-  filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
-  transform: rotate(117.88deg);
-  border-radius: 50%;
+  left: 175px;
+  top: 325px;
+  opacity: 50%;
 }
 
 .card-right-side {
@@ -98,6 +92,21 @@
   margin-top: 40px;
 }
 
+.sign-in:hover {
+  background: #EDFAED;
+  border: 1px solid #6A6D79;
+}
+
+.sign-in:focus {
+  background: #EDFAED;
+  border: 1px solid #6A6D79;
+}
+
+.sign-in:active {
+  background: #8EBD9D;
+  border: 0px;
+}
+
 .btn-sign-in {
   width: 100%;
   height: 100%;
@@ -136,7 +145,9 @@
   padding-top: 10px;
 }
 
-.invalid {}
+.invalid {
+  border: 1px red dotted;
+}
 
 .clear {
   opacity: 50%;
