--- a/src/app/components/registration-page/registration-page.component.css
+++ b/src/app/components/registration-page/registration-page.component.css
@@ -3,6 +3,7 @@
   height: 94.5px;
   margin-top: 27px;
   margin-left: 172px;
+  margin-bottom: 34px;
   border-bottom: 2px solid #e9e9e9;
 }
 
@@ -23,24 +24,26 @@
   filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
   transform: rotate(117.88deg);
   border-radius: 50%;
+  opacity: 50%;
 }
 
 .logo-img2 {
   position: absolute;
   width: 50px;
   height: 49.74px;
-  left: 1027px;
-  top: 128px;
+  left: 1032px;
+  top: 162px;
 
   background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
   filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
   transform: rotate(117.88deg);
   border-radius: 50%;
+  opacity: 50%;
 }
 
 .container-registration {
-  width: 899px;
-  margin-left: 511px;
+  width: 1246px;
+  margin-left: 337px;
 }
 
 .container-registration q {
@@ -48,14 +51,15 @@
 }
 
 .welcome {
+  width: 871px;
   font-size: 48px;
   line-height: 120%;
+  padding-left: 177px;
+  margin-bottom: 37px;
 }
 
 .registration {
-  width: 899px;
-  height: 821px;
-  margin-top: 43px;
+  height: 560px;
   background: rgba(190, 218, 195, 0.7);
   border-radius: 20px;
 }
@@ -63,9 +67,9 @@
 .info {
   font-size: 28px;
   line-height: 38px;
-  padding-top: 61px;
-  padding-left: 61px;
-  margin-bottom: 51px;
+  padding-top: 26px;
+  padding-left: 59px;
+  margin-bottom: 21px;
 }
 
 .input-field {
@@ -74,7 +78,7 @@
   border-radius: 20px;
   margin-left: 61px;
   background: #FBFBF5;
-  margin-bottom: 34px;
+  margin-bottom: 20px;
 }
 
 .input-field input {
@@ -97,11 +101,26 @@
 .sign-up {
   width: 275px;
   height: 54px;
-  margin-top: 68px;
+  margin-top: 40px;
   background: #E0E0D6;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
   border-radius: 10px;
-  margin-left: 61px;
+  margin-left: 485px;
+}
+
+.sign-up:hover {
+  background: #EDFAED;
+  border: 1px solid #6A6D79;
+}
+
+.sign-up:focus {
+  background: #EDFAED;
+  border: 1px solid #6A6D79;
+}
+
+.sign-up:active {
+  background: #8EBD9D;
+  border: 0px;
 }
 
 .btn-sign-up {
@@ -126,6 +145,67 @@
 .invalid {}
 
 .clear {
-  opacity: 50%;
-  background-color: #f5f5f2;
+  /* opacity: 50%;
+  background-color: #f5f5f2; */
+}
+
+.flex-registration {
+  display: flex;
+  gap: 144px;
+}
+
+.flex-registration .choose-account {
+  font-size: 28px;
+  line-height: 38px;
+  margin-top: 53px;
+  margin-bottom: 22px;
+}
+
+.first+label {
+  margin-bottom: 26px;
+}
+
+.custom-radio {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.custom-radio+label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 177.69%;
+}
+
+.custom-radio+label::before {
+  content: '';
+  display: inline-block;
+  width: 22.6px;
+  height: 24px;
+  margin-right: 26.4px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% 100%;
+}
+
+.custom-radio_single:checked+label::before {
+  background-image: url("../../../assets/img/filter-single-checked.svg");
+}
+
+.custom-radio_single:disabled+label::before {
+  background-image: url("../../../assets/img/filter-single-default.svg");
+}
+
+.custom-radio_single+label::before {
+  background-image: url("../../../assets/img/filter-single-default.svg");
+}
+
+.radio .help {
+  font-weight: 300;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.6);
+  padding-left: 50px;
 }
