--- a/src/app/components/main-webpage/filter/filter.component.html
+++ b/src/app/components/main-webpage/filter/filter.component.html
@@ -28,8 +28,8 @@
       </div>
 
       <div class="radio">
-        <input type="checkbox" class="custom-radio custom-radio_multiple" id="Leninski" name="district"
-          value="Leninski">
+        <input type="checkbox" class="custom-radio custom-radio_multiple" id="Leninski" name="district" value="Leninski"
+          [(ngModel)]="a">
         <label for="Leninski">Ленинский</label>
       </div>
 
@@ -117,3 +117,4 @@
     </div>
 
   </div>
+</div>
