--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.html
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.html
@@ -27,4 +27,79 @@
 
 </div>
 
+<div class="progress-information">
+  <div class="donut-chart-block block">
+    <div class="donut-chart">
+      <div id="section1" class="clip">
+        <div class="item"></div>
+      </div>
+      <div id="section2" class="clip">
+        <div class="item"></div>
+      </div>
+      <div id="section3" class="clip">
+        <div class="item"></div>
+      </div>
+      <div class="center">
+        <span></span>
+      </div>
+    </div>
+  </div>
+
+  <span class="progress-information__span">
+    Добавь ещё одно место и получи подарок
+  </span>
+
+  <button class="progress-information__btn">
+    Добавить место
+  </button>
+</div>
+
+<div class="about-information">
+
+  <p class="title">О себе</p>
+
+  <div class="about-information display-flex">
+    <div class="input-field name">
+      <input id="name" placeholder="Имя" type="text">
+      <label for="name"></label>
+    </div>
+
+    <div class="input-field surname">
+      <input id="surname" placeholder="Фамилия" type="text">
+      <label for="surname"></label>
+    </div>
+  </div>
+
+  <div class="input-field city">
+    <input id="city" placeholder="Город" type="text">
+    <label for="city"></label>
+  </div>
+
+  <div class="input-field phone">
+    <input id="phone" placeholder="Номер телефона" type="phone">
+    <label for="phone"></label>
+  </div>
+
+  <button class="progress-information-input__btn">
+    Сохранить
+  </button>
+
+</div>
+
+<div class="business-information">
+  <p class="title" style="margin-bottom: 22px;">
+    Бизнес-аккаунт
+  </p>
+  <p class="business-information__text">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tellus lorem, condimentum eget arcu nec, tempor
+    dignissim quam. Quisque fringilla accumsan nisl vitae facilisis. Suspendisse lacus libero, pulvinar at nunc a,
+    luctus dictum libero. Etiam aliquet orci quis diam pellentesque lacinia. Donec laoreet, lectus sit amet dignissim
+    sagittis, nibh velit volutpat purus, ac scelerisque dui tortor vitae diam.
+  </p>
+  <button class="business-information__btn">
+    Перейти на бизнес-аккаунт
+  </button>
+
+</div>
+
 <app-footer></app-footer>
