--- a/src/app/components/main-webpage/main-page/main-page.component.css
+++ b/src/app/components/main-webpage/main-page/main-page.component.css
@@ -15,6 +15,7 @@
   width: 1600px;
   height: 413px;
   margin-left: 160px;
+  margin-top: 70px;
   background-color: #E0E0D6;
   border-radius: 20px;
   margin-bottom: 70px;
@@ -64,4 +65,113 @@
   border-radius: 10px;
   font-weight: 600;
   color: rgba(27, 31, 59, 0.6);
+}
+
+.filter-container {
+  background: rgba(190, 218, 195, 0.7);
+  border-radius: 20px;
+  width: 419px;
+  height: 1037px;
+  margin-left: 161px;
+}
+
+.filter-container h1 {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  padding-top: 55px;
+  padding-left: 56px;
+  margin-bottom: 26px;
+}
+
+.filter {}
+
+.filter-labels {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.filter-labels h2 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 33px;
+  padding-left: 56px;
+  padding-bottom: 6px;
+}
+
+.filter-labels h3 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 33px;
+}
+
+.filter-parking {
+  margin-top: 16px;
+}
+
+.custom-radio {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.custom-radio+label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+  font-size: 24px;
+  line-height: 177.69%;
+}
+
+.custom-radio+label::before {
+  content: '';
+  display: inline-block;
+  width: 22.6px;
+  height: 24px;
+  margin-right: 19px;
+  margin-left: 15px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% 100%;
+}
+
+.custom-radio_multiple:checked+label::before {
+  background-image: url("..//..//..//../assets/img/filter-multiple-checked.svg");
+}
+
+.custom-radio_multiple:disabled+label::before {
+  background-image: url("..//..//..//../assets/img/filter-multiple-default.svg");
+}
+
+.custom-radio_multiple+label::before {
+  background-image: url("..//..//..//../assets/img/filter-multiple-default.svg");
+}
+
+.custom-radio_single:checked+label::before {
+  background-image: url("..//..//..//../assets/img/filter-single-checked.svg");
+}
+
+.custom-radio_single:disabled+label::before {
+  background-image: url("..//..//..//../assets/img/filter-single-default.svg");
+}
+
+.custom-radio_single+label::before {
+  background-image: url("..//..//..//../assets/img/filter-single-default.svg");
+}
+
+.coworking-type {
+  margin-top: 11px;
+}
+
+.coworking-time {
+  margin-top: 11px;
+}
+
+.filter-parking {
+  margin-bottom: 12px;
+}
+
+.filter-restzone {
+  margin-bottom: 12px;
 }
