--- a/src/app/components/main-webpage/main-page/main-page.component.html
+++ b/src/app/components/main-webpage/main-page/main-page.component.html
@@ -14,13 +14,169 @@
 
 
 <p class="count-coworkings" id="coworkings-list"> Найдено: {{coworkings.length}} </p>
+<span *ngIf="">
+
+</span>
 
 <div class="filter-and-coworkings">
 
-  <app-filter></app-filter>
+  <div class="filter-container">
+    <h1>Фильтры</h1>
+
+    <div class="filter">
+
+      <div class="filter-labels filter-district">
+        <h2>Район</h2>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="akadem" name="district" value="akadem"
+            [(ngModel)]="Akadem">
+          <label for="akadem">Академический</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="VIZ" name="district" value="VIZ"
+            [(ngModel)]="VIZ">
+          <label for="VIZ">Верх-Исетский</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="JD" name="district" value="JD"
+            [(ngModel)]="JD">
+          <label for="JD">Железнодорожный</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="Kirovski" name="district"
+            value="Kirovski" [(ngModel)]="Kirovski">
+          <label for="Kirovski">Кировский</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="Leninski" name="district"
+            value="Leninski" [(ngModel)]="Leninski">
+          <label for="Leninski">Ленинский</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="Octyabrski" name="district"
+            value="Octyabrski" [(ngModel)]="Octyabrski">
+          <label for="Octyabrski">Октябрьский</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="ORDJ" name="district" value="ORDJ"
+            [(ngModel)]="ORDJ">
+          <label for="ORDJ">Орджоникидзевский</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="Chkalovski" name="district"
+            value="Chkalovski" [(ngModel)]="Chkalovski">
+          <label for="Chkalovski">Чкаловский</label>
+        </div>
+
+      </div>
+
+      <div class="filter-labels filter-type-coworking">
+        <h2 class="coworking-type">Вид коворкинга</h2>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="office" name="type" value="office"
+            [(ngModel)]="office">
+          <label for="office">Рабочий офис</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="anticafe" name="type" value="anticafe"
+            [(ngModel)]="anticafe">
+          <label for="anticafe">Антикафе</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_multiple" id="cafe" name="type" value="cafe"
+            [(ngModel)]="cafe">
+          <label for="cafe">Кафе</label>
+        </div>
+
+      </div>
+
+      <div class="filter-labels filter-time">
+        <h2 class="coworking-time">Часы работы</h2>
+
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_single" id="everytime" name="time" value="everytime"
+            [(ngModel)]="kruglosutochno">
+          <label for="everytime">Круглосуточно</label>
+        </div>
+
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_single" id="weekdays" name="time" value="weekdays"
+            [(ngModel)]="budni">
+          <label for="weekdays">По будням</label>
+        </div>
+
+      </div>
+
+      <div class="filter-labels filter-parking">
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_single" id="parking" name="parking" value="parking"
+            [(ngModel)]="parking">
+          <label for="parking">
+            <h3>Парковка</h3>
+          </label>
+        </div>
+      </div>
+
+      <div class="filter-labels filter-restzone">
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_single" id="restzone" name="restzone" value="restzone"
+            [(ngModel)]="recreation_area">
+          <label for="restzone">
+            <h3>Зона отдыха</h3>
+          </label>
+        </div>
+      </div>
+
+      <div class="filter-labels filter-conference">
+        <div class="radio">
+          <input type="checkbox" class="custom-radio custom-radio_single" id="conference" name="conference"
+            value="conference" [(ngModel)]="conference_hall">
+          <label for="conference">
+            <h3>Наличие конференц-зала</h3>
+          </label>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <!-- <app-filter></app-filter> -->
   <div>
 
-    <app-coworkings-list *ngFor="let coworking of coworkings | findCoworking: term; let i = index"
+    <app-coworkings-list *ngFor="let coworking of coworkings
+      | findCoworking: term
+      | filterCoworking: 'district':Akadem:'Академический'
+      | filterCoworking: 'district':VIZ:'Верх-Исетский'
+      | filterCoworking: 'district':JD:'Железнодорожный'
+      | filterCoworking: 'district':Kirovski:'Кировский'
+      | filterCoworking: 'district':Leninski:'Ленинский'
+      | filterCoworking: 'district':Octyabrski:'Октябрьский'
+      | filterCoworking: 'district':ORDJ:'Орджоникидзевский'
+      | filterCoworking: 'district':Chkalovski:'Чкаловский'
+
+      | filterCoworking: 'type_cafe':office:'Рабочий офис'
+      | filterCoworking: 'type_cafe':anticafe:'Антикафе'
+      | filterCoworking: 'type_cafe':cafe:'Кафе'
+
+      | filterCoworking: 'time':kruglosutochno:'Круглосуточно'
+      | filterCoworking: 'time':budni:'Будни'
+
+      | filterCoworking: 'parking': parking
+      | filterCoworking: 'recreation_area' : recreation_area
+      | filterCoworking: 'conference_hall' : conference_hall; let i = index"
       [coworking]="coworking"></app-coworkings-list>
 
   </div>
