--- a/src/app/components/profile-settings/profile-settings/profile-settings.component.css
+++ b/src/app/components/profile-settings/profile-settings/profile-settings.component.css
@@ -58,3 +58,241 @@
   font-size: 20px;
   line-height: 177.69%;
 }
+
+.progress-information {
+  margin-left: 560px;
+  margin-bottom: 40px;
+  padding: 50px 85px 80px 102px;
+  width: 1075.53px;
+  left: 568.47px;
+  top: 824px;
+  background: rgba(190, 218, 195, 0.7);
+  border-radius: 20px;
+}
+
+.progress-information__span {
+  display: flex;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 54px;
+  letter-spacing: 0em;
+  text-align: center;
+  margin-left: 75px;
+  color: rgba(27, 31, 59, 0.8);
+  width: 560px;
+  margin-bottom: 90px;
+}
+
+.progress-information__btn {
+  cursor: pointer;
+  display: flex;
+  width: 188.49px;
+  padding: 13px 28px;
+  background: #E0E0D6;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
+  font-weight: 600;
+  color: rgba(27, 31, 59, 0.6);
+  margin: 0 60%;
+}
+
+.about-information {
+  margin-left: 560px;
+}
+
+.display-flex {
+  display: flex;
+  margin-left: 0;
+}
+
+.title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 38px;
+  color: #000000;
+  margin-bottom: 54px;
+}
+
+input {
+  cursor: pointer;
+}
+
+.input-field input {
+  width: 528px;
+  height: 57px;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 28px;
+  padding-left: 28px;
+  background: #E0E0D6;
+  border-radius: 10px;
+}
+
+.input-field.name {
+  margin-right: 49px;
+  margin-bottom: 38px;
+}
+
+.input-field.city {
+  margin-right: 49px;
+  margin-bottom: 38px;
+}
+
+.input-field.phone {
+  margin-right: 49px;
+  margin-bottom: 38px;
+}
+
+.progress-information-input__btn {
+  cursor: pointer;
+  display: flex;
+  width: 188.49px;
+  padding: 13px 43px;
+  background: #E0E0D6;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
+  font-weight: 600;
+  color: rgba(27, 31, 59, 0.6);
+  margin-bottom: 40px;
+}
+
+.business-information {
+  margin-left: 560px;
+}
+
+.business-information__text {
+  margin-bottom: 4px;
+  width: 1000.5px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 177.69%;
+  color: #000000;
+}
+
+.business-information__btn {
+  margin-bottom: 150px;
+  cursor: pointer;
+  display: flex;
+  width: 251px;
+  padding: 13px 9px;
+  background: #E0E0D6;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+  border-radius: 10px;
+  font-weight: 600;
+  color: rgba(27, 31, 59, 0.6);
+}
+
+
+
+
+
+
+.block {
+  float: left;
+  width: 300px;
+  overflow: hidden;
+}
+
+.donut-chart-block {
+  overflow: hidden;
+  width: 430px;
+}
+
+.donut-chart {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin: 2rem auto;
+  border-radius: 100%
+}
+
+.donut-chart .center {
+  background: rgba(190, 218, 195, 0.7);
+  border-radius: 50%;
+  height: 60%;
+  left: 20%;
+  position: absolute;
+  top: 20%;
+  width: 60%;
+}
+
+.center span {
+  color: #7a7a7a;
+  display: block;
+  font-size: 36px;
+  font-weight: 800;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.clip {
+  border-radius: 50%;
+  clip: rect(0px, 200px, 200px, 100px);
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+.item {
+  border-radius: 50%;
+  clip: rect(0px, 100px, 200px, 0px);
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  font-family: monospace;
+  font-size: 1.5rem;
+}
+
+#section1 {
+  transform: rotate(0deg);
+}
+
+#section1 .item {
+  background-color: #9C5D56;
+  transform: rotate(180deg);
+}
+
+#section2 {
+  transform: rotate(180deg);
+}
+
+#section2 .item {
+  background-color: #C2BDAD;
+  transform: rotate(180deg);
+}
+
+/*  slider */
+.range-slider {
+  display: inline-block;
+  width: 40px;
+  position: relative;
+  text-align: center;
+  height: 300px;
+
+}
+
+.range-slider__thumb {
+  position: absolute;
+  left: 5px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  background: #9C5D56;
+  color: #fff;
+  font-size: 60%;
+  border-radius: 50%;
+  pointer-events: none;
+}
+
+.range-slider__bar {
+  left: 16px;
+  bottom: -200px;
+  position: absolute;
+  pointer-events: none;
+  width: 8px;
+  border-radius: 10px;
+}
