--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -4,7 +4,6 @@
   height: 75px;
   margin-left: 160px;
   margin-top: 50px;
-  margin-bottom: 70px;
   border-bottom: 2px solid #e9e9e9;
   justify-content: space-between;
   padding-bottom: 5px;
@@ -70,14 +69,60 @@
   margin-right: 42px;
 }
 
+.profile-img {
+  margin-right: 17px;
+}
+
 .profile-name {
-  margin-left: 17px;
   font-size: 15px;
   line-height: 28px;
   color: rgba(27, 31, 59, 0.8);
 }
 
+.dropdown {
+  position: relative;
+  margin-top: 160px;
+}
+
+.dropdown-menu {
+  padding-top: 13px;
+  background: #FBFBF5;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 7px;
+  visibility: hidden;
+  opacity: 0;
+  z-index: -1;
+  transition: all .2s ease-out;
+}
+
+.dropdown-menu.show {
+  z-index: 99;
+  visibility: visible;
+  opacity: 1;
+}
+
+.dropdown-menu a {
+  display: block;
+  color: #494C62;
+  padding: 11px 11px;
+  opacity: 0.7;
+}
+
+.dropdown-menu a:hover {
+  opacity: 1;
+}
+
 .btn-settings {
   height: 10px;
-  margin-left: 10px;
+  position: relative;
 }
+
+
+
+.settings li {
+  position: relative;
+}
+
+/* .settings li a {
+  display: block;
+} */
