--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,22 +9,35 @@
   </div>
 
   <div class="header-right-side">
-    <button type="button" class="btn-add-coworking">Добавить место</button>
+    <button type="button" class="btn-add-coworking" routerLink="/main/add">Добавить место</button>
 
     <button type="button" class="btn-notification">
       <img src="assets/img/notification.svg" alt="notification" width="20" height="22">
     </button>
 
-    <a routerLink="/profile">
+    <a routerLink="/profile" class="profile-img">
       <img src="assets/img/profile.png" alt="profile" width="80" height="80">
     </a>
 
-    <p class="profile-name">Мария Иванова</p>
+    <div class="dropdown">
+      <p class="profile-name">Мария Иванова</p>
 
-    <button class="btn-settings">
-      <img src="assets/img/settings.svg" alt="settings" width="13" height="13">
-    </button>
+      <div class="dropdown-menu" [ngClass]="{
+      'show': ifClicked
+    }">
+        <a routerLink="" class="dropdown-link">Избранное</a>
+        <a routerLink="/profile" class="dropdown-link">Настройки профиля</a>
+        <a routerLink="" class="dropdown-link">Настройки мест</a>
+        <a href="#" class="dropdown-link" (click)="logout($event)">Выход</a>
+      </div>
+    </div>
+
+    <div>
+      <button class="btn-settings" (click)="ifClicked = !ifClicked">
+        <img src="assets/img/settings.svg" alt="settings" width="13" height="13">
+      </button>
+
+    </div>
 
   </div>
-
 </div>
