--- a/src/styles.css
+++ b/src/styles.css
@@ -72,6 +72,7 @@ video {
   border: 0;
   outline: 0;
   font-size: 100%;
+  font-weight: 400;
   vertical-align: baseline;
   background: transparent;
   font-style: normal;
