--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -25,7 +25,7 @@
       <div class="dropdown-menu" [ngClass]="{
       'show': ifClicked
     }">
-        <a routerLink="" class="dropdown-link">Избранное</a>
+        <a routerLink="/favourites" class="dropdown-link">Избранное</a>
         <a routerLink="/profile" class="dropdown-link">Настройки профиля</a>
         <a routerLink="" class="dropdown-link">Настройки мест</a>
         <a href="#" class="dropdown-link" (click)="logout($event)">Выход</a>
