--- a/src/app/components/main-webpage/coworking-item/coworking-item.component.css
+++ b/src/app/components/main-webpage/coworking-item/coworking-item.component.css
@@ -183,9 +183,9 @@
   line-height: 177.69%;
 }
 
-.reviews {
+.add-review {
   width: 1147px;
-  height: 1248px;
+  margin-bottom: 100px;
 }
 
 .reviews-title {
@@ -195,7 +195,7 @@
   margin-bottom: 26px;
 }
 
-.rating {
+.add-rating {
   display: flex;
 }
 
@@ -224,4 +224,41 @@
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
   border-radius: 10px;
   margin-left: 900px;
+}
+
+.review {
+  display: flex;
+}
+
+.review .avatar {
+  margin-right: 27px;
+}
+
+.review-title {
+  position: relative;
+}
+
+.review-name-date {
+  display: flex;
+  align-items: center;
+}
+
+.review-name {
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 30px;
+  margin-right: 8px;
+}
+
+.review-time {
+  padding-top: 5px;
+  font-size: 15px;
+  line-height: 177.69%;
+  color: #535353;
+}
+
+.review-rating {
+  position: absolute;
+  width: 268px;
+  left: -10px;
 }
