добавила ad-business, place-settings

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -27,7 +27,8 @@
     }">
         <a routerLink="/favourites" class="dropdown-link">Избранное</a>
         <a routerLink="/profile" class="dropdown-link">Настройки профиля</a>
-        <a routerLink="" class="dropdown-link">Настройки мест</a>
+        <a routerLink="/place-settings" class="dropdown-link">Настройки мест</a>
+        <a routerLink="/ad-business" class="dropdown-link">Продвижение</a>
         <a href="#" class="dropdown-link" (click)="logout($event)">Выход</a>
       </div>
     </div>
