связал с бекендом, отправляются отзывы (нужно доработать)

--- a/src/app/components/add-coworking/add-coworking.component.html
+++ b/src/app/components/add-coworking/add-coworking.component.html
@@ -61,7 +61,7 @@
     <h1>Фильтры</h1>
 
     <div class="input-field workHours">
-      <select id="workHours" placeholder="Часы работы" formControlName="workHours">
+      <select id="opening_hours" placeholder="Часы работы" formControlName="opening_hours">
         <option value="" disabled selected hidden>Часы работы</option>
         <option value="Круглосуточно">Круглосуточно</option>
         <option value="По будням">По будням</option>
@@ -72,7 +72,7 @@
       <div class="input-field type">
         <select id="type" placeholder="Тип заведения" formControlName="type">
           <option value="" disabled selected hidden>Тип заведения</option>
-          <option value="Рабочий офис">Рабочий офис</option>
+          <option value="Рабочий зал">Рабочий зал</option>
           <option value="Антикафе">Антикафе</option>
           <option value="Кафе">Кафе</option>
         </select>
