--- a/src/app/components/registration-page/registration-page.component.html
+++ b/src/app/components/registration-page/registration-page.component.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="input-field lastname">
-          <input id="lastname" placeholder="Введите фамилию" type="text" formControlName="lastName">
+          <input id="lastname" placeholder="Введите фамилию" type="text" formControlName="surname">
           <label for="lastname"></label>
         </div>
 
@@ -64,13 +64,13 @@
 
         <div class="radio">
           <input type="radio" class="custom-radio custom-radio_single first" id="basic" name="account" value=1
-            formControlName="type">
+            formControlName="role_id">
           <label for="basic">Обычный пользователь</label>
         </div>
 
         <div class="radio">
           <input type="radio" class="custom-radio custom-radio_single second" id="bussiness" name="account" value=2
-            formControlName="type">
+            formControlName="role_id">
           <label for="bussiness">Бизнес-аккаунт</label>
           <br>
           <div class="help">Для продвижения вашего бизнеса</div>
