--- a/src/app/components/main-webpage/filter/filter.component.html
+++ b/src/app/components/main-webpage/filter/filter.component.html
@@ -57,7 +57,7 @@
 
       <div class="radio">
         <input type="checkbox" class="custom-radio custom-radio_multiple" id="office" name="type" value="office">
-        <label for="office">Рабочий офис</label>
+        <label for="office">Рабочий зал</label>
       </div>
 
       <div class="radio">
